Fix sidebar stretch

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     height: 100vh;
     font-family: 'Roboto', sans-serif;
     display: grid;
-    grid: 200px 1fr / 1fr 4fr;
+    grid: 200px 1fr / 250px 1fr;
     box-sizing: border-box;
 }
 
@@ -120,7 +120,6 @@
     display: grid;
     grid: 100px 1fr / 1fr;
     padding: 0 20px;
-    max-width: 250px;
 }
 
 .dashboard{
